Background image for login fix
Background image is no longer cropped.

--- a/css/login.css
+++ b/css/login.css
@@ -3,9 +3,10 @@
 
 #login h1 a {
 	background-image: url('../images/logo.png');
-	background-size: 320px auto;
+	background-size: 100% auto;
 	background-repeat: no-repeat;
 	background-position: center;
+	width: 100%;
 	}
 	
 #backtoblog {
